--- a/Project.toml
+++ b/Project.toml
@@ -6,4 +6,5 @@ version = "0.1.0"
 [deps]
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
