--- a/Project.toml
+++ b/Project.toml
@@ -8,4 +8,5 @@ BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
+PerceptualColourMaps = "54e51dfa-9dd7-5231-aa84-a4037b83483a"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
