--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ docs/site/
 # committed for packages, but should be committed for applications that require a static
 # environment.
 Manifest.toml
+mag_0.7_U_1.0_lambda_0.01.jl.textClipping
