--- a/Project.toml
+++ b/Project.toml
@@ -13,5 +13,6 @@ GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
+LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
 PerceptualColourMaps = "54e51dfa-9dd7-5231-aa84-a4037b83483a"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
