--- a/Project.toml
+++ b/Project.toml
@@ -12,8 +12,11 @@ FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 GLM = "38e38edf-8417-5370-95a0-9cbb8c7f171a"
 GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+GLPK = "60bf3e95-4087-53dc-ae20-288a0d20c6a6"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
+Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
+JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
 NaNStatistics = "b946abbf-3ea7-4610-9019-9858bfdeaf2d"
 PerceptualColourMaps = "54e51dfa-9dd7-5231-aa84-a4037b83483a"
