--- a/Project.toml
+++ b/Project.toml
@@ -18,6 +18,7 @@ Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JLD2 = "033835bb-8acc-5ee8-8aae-3f567f8a3819"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 LsqFit = "2fda8390-95c7-5789-9bda-21331edee243"
+MarkovChainHammer = "38c40fd0-bccb-4723-b30d-b2caea0ad8d9"
 NaNStatistics = "b946abbf-3ea7-4610-9019-9858bfdeaf2d"
 PerceptualColourMaps = "54e51dfa-9dd7-5231-aa84-a4037b83483a"
 ProgressBars = "49802e3a-d2f1-5c88-81d8-b72133a6f568"
